# Ciberchud

./: CMakeLists.txt  LICENSE  NOTES.md  README.md  assets.cmake  csrc.cmake  fonts.cmake  pxrgb.cmake
assets/bsp/: cyberchud.fgd  level0.map  leveltitle.map  pres.map  token.map  vacay0.map  wavecruising.map
assets/bsp/wads/: cyberchud.wad
assets/snd/: beep.txt  click.txt  door_open.txt  inv_switch.txt  inv_unavail.txt  jump.txt  laser.txt  laser_fire.txt  pain.txt  pickup.txt  shepards_tone.txt  shotgun_fire.txt  smg_fire.txt  text_beep.txt  troon_fire.txt
distro/chudsvacation/: Once.HC
distro/cyberchud/: Once.HC
emscripten/: shell.html
holyc/: ChudsVacationLoad.HC  CyberChudLoad.HC  zRun.HC
holyc/Lib/: CrunkComm.HC  ELF64.HC  LibC.HC  SDL2.HC  SDL2ScanCodes.HC
include/ccd/: ccd.h  internal.h  quat.h  vec3.h
scripts/: qemu-create.sh.in
scripts/chudsvacation/: qemu-update.sh.in  vmware-init.sh.in  vmware.sh.in
scripts/cyberchud/: qemu-update.sh.in  vmware-init.sh.in  vmware.sh.in
src/: ai_common.c  ai_common.h  alloc.h  bsp_parse.h  cull.h  draw.h  flags.h  game.h  particle.h  phys.h  playfield.h  render.h  text.h  tosfb.h  visflags.h  vshaders.h  worker.h
src/ents/: button.c  button.h  chud.c  chud.h  cow.c  cow.h  door.c  door.h  dynlight.c  dynlight.h  mob.c  mob.h  mule.c  mule.h  pickup.c  pickup.h  player.c  player.h  rocket.c  rocket.h  spawner.c  spawner.h  trigger.c  trigger.h  troon.c  troon.h
src/musl/: __cos.c  __rem_pio2_large.c  __signbit.c  __sin.c  asin.c  asinf.c  atan.c  atan2.c  atan2f.c  atanf.c  atomic_arch.h  copysign.c  cos.c  exp2f_data.h  exp_data.h  libm.h  log_data.h  math.c  pow_data.h  powf.c  qsort.c  qsort_nr.c  roundf.c  scalbn.c  sin.c  sqrt_data.h  sqrtf.c  stpncpy.c  strncat.c
src/scene/: playfield.c  playfield.h  title.c  title.h
src/shaders/: ubershader.c  ubershader.h
src/types/: name_heap.c  name_heap.h
src/ui/: menu_common.c  menu_common.h  menu_controls.c  menu_controls.h  menu_cubemap.c  menu_cubemap.h  menu_debug.c  menu_debug.h  menu_options.c  menu_options.h  menu_pause.c  menu_pause.h  menu_title.c  menu_title.h  statusline.c  statusline.h  talkbox.c  talkbox.h
src/ui/widgets/: button.c  button.h  tos_text.c  tos_text.h  widget_graph.c  widget_graph.h
src/utils/: minmax.h  myds.h  mymalloc.c  mymalloc.h  mypow.h  pad.h
src/vfx/: vfx_camrock.c  vfx_camrock.h  vfx_common.h  vfx_neverhappen.c  vfx_neverhappen.h  vfx_wireframe.c  vfx_wireframe.h
src/x86_64/: isr_pit.s
tools/: mfa.py  obj2holyc.py
tools/holyass/: CMakeLists.txt  Makefile  README.md  animation.cpp  animation.h  bones.cpp  bones.h  export.cpp  export.h  flags.cpp  flags.h  main.cpp  types.h
tools/holytone/: CMakeLists.txt  README.md  fcomb-test.sh  flags.c  flags.h  main.c  make.sh  test.c  yinfft-test.sh
tools/png2bin/: CMakeLists.txt  flags.c  flags.h  main.c
tools/wadmaker/: CMakeLists.txt  Makefile  common.h  flags.cpp  flags.h  main.cpp
zealc/: Load.ZC  Run.ZC  zRun.ZC
zealc/Lib/: ELF64.ZC  LibC.ZC  SDL2.ZC
